test/fail/entitynulltype.app
//Attribute type Null is not allowed
application test

section datamodel

  entity User {
    authoredPapers :: Null
  }
